--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "knex": "knex"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,7 +12,9 @@
     "express": "~4.16.1",
     "express-graphql": "^0.9.0",
     "graphql": "^15.1.0",
-    "morgan": "~1.9.1"
+    "knex": "^0.21.1",
+    "morgan": "~1.9.1",
+    "pg": "^8.2.1"
   },
   "devDependencies": {
     "eslint": "^7.3.1",
