--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,11 @@
   "env": {
     "commonjs": true,
     "es2020": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "extends": ["prettier", "airbnb-base"],
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "jest"],
   "parserOptions": {
     "ecmaVersion": 11
   },
