--- a/package.json
+++ b/package.json
@@ -4,24 +4,31 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "knex": "knex"
+    "knex": "knex",
+    "test": "jest"
   },
   "dependencies": {
+    "@apollo/federation": "^0.16.9",
+    "apollo-server": "^2.15.0",
+    "apollo-server-express": "^2.15.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "express-graphql": "^0.9.0",
     "graphql": "^15.1.0",
     "knex": "^0.21.1",
     "morgan": "~1.9.1",
     "pg": "^8.2.1"
   },
   "devDependencies": {
+    "apollo-server-testing": "^2.15.0",
     "eslint": "^7.3.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jest": "^23.17.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.0.5"
+    "jest": "^26.1.0",
+    "prettier": "^2.0.5",
+    "supertest": "^4.0.2"
   }
 }
