--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/federation": "^0.16.9",
+    "@hapi/joi": "^17.1.1",
     "apollo-server": "^2.15.0",
     "apollo-server-express": "^2.15.0",
     "cookie-parser": "~1.4.4",
@@ -17,7 +18,8 @@
     "graphql": "^15.1.0",
     "knex": "^0.21.1",
     "morgan": "~1.9.1",
-    "pg": "^8.2.1"
+    "pg": "^8.2.1",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "apollo-server-testing": "^2.15.0",
@@ -28,6 +30,7 @@
     "eslint-plugin-jest": "^23.17.1",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.1.0",
+    "knex-cleaner": "^1.3.0",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2"
   }
