From customer to relationship

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -11,6 +11,8 @@
     "ecmaVersion": 11
   },
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "arrow-body-style": "off",
+    "max-classes-per-file": "off"
   }
 }
