--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^15.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "watch:css": "postcss src/styles/tailwind.css -o src/styles/main.css -w",
+    "build:css": "postcss src/styles/tailwind.css -o src/styles/main.css",
+    "prebuild": "npm run build:css",
+    "start": "npm run watch:css & react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -32,6 +39,9 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "autoprefixer": "^9.8.4",
+    "postcss-cli": "^7.1.1",
+    "prettier": "^2.0.5",
+    "tailwindcss": "^1.4.6"
   }
 }
