--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon --watch src ./bin/www",
     "knex": "knex",
-    "test": "jest"
+    "jest": "jest",
+    "test": "jest --runInBand --verbose",
+    "test:watch": "jest --watch --runInBand",
+    "seed:test": "knex migrate:rollback --all --env test && knex migrate:latest --env test && knex seed:run --env=test",
+    "seed:dev": "knex migrate:rollback --all && knex migrate:latest && knex seed:run"
   },
   "dependencies": {
     "@apollo/federation": "^0.16.9",
@@ -13,8 +17,10 @@
     "apollo-server": "^2.15.0",
     "apollo-server-express": "^2.15.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "faker": "^4.1.0",
     "graphql": "^15.1.0",
     "knex": "^0.21.1",
     "morgan": "~1.9.1",
@@ -31,6 +37,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.1.0",
     "knex-cleaner": "^1.3.0",
+    "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2"
   }
