Add missing cases and cleanup

--- a/server/package.json
+++ b/server/package.json
@@ -40,5 +40,10 @@
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2"
+  },
+  "jest": {
+    "modulePathIgnorePatterns": [
+      "__queries__"
+    ]
   }
 }
