--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "watch:css": "postcss src/styles/tailwind.css -o src/styles/main.css -w",
     "build:css": "postcss src/styles/tailwind.css -o src/styles/main.css",
-    "prebuild": "npm run build:css",
+    "prebuild": "NODE_ENV=production npm run build:css",
     "start": "npm run watch:css & react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,9 +39,10 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.4",
+    "autoprefixer": "^9.8.6",
     "postcss-cli": "^7.1.1",
     "prettier": "^2.0.5",
+    "stylelint-config-recommended": "^3.0.0",
     "tailwindcss": "^1.4.6"
   }
 }
