--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -5,7 +5,7 @@
     "node": true,
     "jest": true
   },
-  "extends": ["prettier", "airbnb-base"],
+  "extends": ["airbnb-base", "prettier"],
   "plugins": ["prettier", "jest"],
   "parserOptions": {
     "ecmaVersion": 11
