--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "apollo-server-express": "^2.15.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "cross-fetch": "^3.0.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "faker": "^4.1.0",
