--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.1.3",
     "@apollo/react-hooks": "^3.1.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "apollo-boost": "^0.4.9",
-    "graphql": "^15.2.0",
+    "classnames": "^2.2.6",
+    "graphql": "^15.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "watch:css": "postcss src/styles/tailwind.css -o src/styles/main.css -w",
-    "build:css": "postcss src/styles/tailwind.css -o src/styles/main.css",
+    "watch:css": "postcss src/styles/tailwind.css -o src/generated/styles/main.css -w",
+    "build:css": "postcss src/styles/tailwind.css -o src/generated/styles/main.css",
     "prebuild": "NODE_ENV=production npm run build:css",
     "start": "npm run watch:css & react-scripts start",
     "build": "react-scripts build",
