--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,20 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
+    "cross-fetch": "^3.0.5",
     "graphql": "^15.3.0",
+    "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "init:graphql": "node src/scripts/fetchPossibleTypes",
     "watch:css": "postcss src/styles/tailwind.css -o src/generated/styles/main.css -w",
     "build:css": "postcss src/styles/tailwind.css -o src/generated/styles/main.css",
-    "prebuild": "NODE_ENV=production npm run build:css",
+    "prestart": "npm run init:graphql",
+    "prebuild": "NODE_ENV=production npm run build:css && npm run init:graphql",
     "start": "npm run watch:css & react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
