--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pouetcrm",
+  "name": "simpdevcrm",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "NODE_ENV=development nodemon --watch src ./bin/www",
     "knex": "knex",
